# true-flag-challenge

./: .gitignore  .pre-commit-config.yaml  CHALLENGE.md  README.md  pyproject.toml
decisions/: 01-Reduce-metadata.md  02-Retreive by image_hirearchy.md  02.1-Retreive agains summary.md  03-No-chat-history.md
notebooks/: 01-initial-dataset-exploration.ipynb
src/: agents.py  config.py  database.py  embeddings.py  graph.py  nodes.py  prompts.py  user_interface.py
src/Chatbot/: agents.py  graph.py  nodes.py  user_interface.py
src/Database/: indexer.py  retriever.py
test/: test_agents.py  test_database.py  test_embeddings.py  test_nodes.py  test_retreiver.py
