[project]
name = "trueflag-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "google-genai>=1.68.0",
    "gradio>=6.10.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-google-vertexai>=3.2.2",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
    "lxml>=6.0.2",
    "pillow>=12.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pandas>=2.3.3",
    "pre-commit>=4.5.1",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
